fix: ui will not break on long downloadable file listing on PredictHome - #321

--- a/src/styles/widgets/DownloadModelFiles/styles.scss
+++ b/src/styles/widgets/DownloadModelFiles/styles.scss
@@ -2,6 +2,9 @@
 
 .predict-show-component .main-view {
   .downloadModelFiles {
+    max-height: 97px;
+    overflow-y: auto;
+
     h6 {
       white-space: nowrap;
       text-overflow: ellipsis;
